syntax = "proto3";

package trpc.register;

message SsoC2CSyncInfo {
  bytes c2c_msg_cookie = 1;
  uint64 c2c_last_msg_time = 2;
  bytes last_c2c_msg_cookie = 3;
}

message DeviceInfo {
  string dev_name = 1;
  string dev_type = 2;
  string os_ver = 3;
  bytes vendor_os_name = 4;
}

message OnLineBusinessInfo {
  uint32 notify_switch = 1;
  uint32 bind_uin_notify_switch = 2;
}

message RegisterInfo {
  string guid = 1;
  uint32 kick_pc = 2;
  string build_ver = 3;
  uint32 is_first_register_proxy_online = 4;
  uint32 locale_id = 5;
  DeviceInfo device_info = 6;
  uint32 set_mut = 7;
  uint32 register_vendor_type = 8;
  uint32 reg_type = 9;
  OnLineBusinessInfo online_busi_info = 10;
  uint32 battery_status = 11;
}

message NormalIntCfgEntry {
  uint32 key = 1;
  int32 value = 2;
}

message NormalConfig {
  repeated NormalIntCfgEntry int_cfg = 1;
}

message CurAppState {
  uint32 is_delay_request = 1;
  uint32 app_status = 2;
  uint32 silence_status = 3;
}

message UnknownStructure {
  uint32 group_code = 1;
  uint32 flag2 = 2;
}

message SsoSyncInfoRequest {
  // sync flag
  // 15 for partial
  // 143 for full
  // 735 register push
  uint32 sync_flag = 1;
  uint32 req_random = 2;
  // 应用前后台状态
  uint32 cur_active_status = 4;
  uint64 group_last_msg_time = 5;
  SsoC2CSyncInfo c2c_sync_info = 6;
  NormalConfig normal_config = 8;
  RegisterInfo register_info = 9;
  UnknownStructure unknown = 10;
  CurAppState app_state = 11;
}